[package]
name = "llvm-passgen"
version = "0.4.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A tool for quickly creating LLVM pass skeletons"
license-file = "LICENSE"
homepage = "https://github.com/woodruffw/llvm-passgen"

[package.metadata.release]
dev-version = false

[badges]
travis-ci = { repository = "woodruffw/llvm-passgen", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
clap = "3"
handlebars = "4.3.6"
rust-embed = "6.4.1"
serde = { version = "~1.0", features = ["derive"] }
