[package]
name = "llvm-passgen"
version = "0.4.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A tool for quickly creating LLVM pass skeletons"
license-file = "LICENSE"
homepage = "https://github.com/woodruffw/llvm-passgen"

[package.metadata.release]
dev-version = false

[badges]
travis-ci = { repository = "woodruffw/llvm-passgen", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
clap = "4"
handlebars = "4.3.5"
rust-embed = "6.4.2"
serde = { version = "~1.0", features = ["derive"] }
